[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Lucida.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menu/Rock_Texture.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menu/Mammoths.png" type="Texture" id=4]
[ext_resource path="res://Fonts/BASKVILL.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.196078, 0.164706, 0.164706, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="Settings" type="Node2D"]
visible = false
z_index = 10
script = ExtResource( 2 )

[node name="WallSprite" type="Sprite" parent="."]
position = Vector2( 688, 414 )
scale = Vector2( 1.3457, 1.60547 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 512 )

[node name="Mammoths" type="Sprite" parent="."]
position = Vector2( 708, 395 )
scale = Vector2( 2.51537, 2.397 )
texture = ExtResource( 4 )

[node name="LblOpciones" type="Label" parent="."]
margin_left = 236.0
margin_top = 102.0
margin_right = 441.0
margin_bottom = 153.0
custom_colors/font_color = Color( 0.121569, 0.105882, 0.105882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Opciones:"

[node name="LblResolution" type="Label" parent="."]
margin_left = 246.0
margin_top = 218.0
margin_right = 356.0
margin_bottom = 249.0
custom_colors/font_color = Color( 0.160784, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Resolución:"

[node name="LblMusicVolume" type="Label" parent="."]
margin_left = 249.0
margin_top = 335.0
margin_right = 359.0
margin_bottom = 366.0
custom_colors/font_color = Color( 0.160784, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Música:"

[node name="LblResolutionValue" type="Label" parent="."]
margin_left = 251.0
margin_top = 260.0
margin_right = 348.0
margin_bottom = 291.0
custom_colors/font_color = Color( 0.160784, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )
text = "640x480"

[node name="MusicValue" type="Label" parent="."]
margin_left = 255.0
margin_top = 378.0
margin_right = 352.0
margin_bottom = 409.0
custom_colors/font_color = Color( 0.160784, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )

[node name="FXValue" type="Label" parent="."]
margin_left = 245.0
margin_top = 507.0
margin_right = 342.0
margin_bottom = 538.0
custom_colors/font_color = Color( 0.160784, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )

[node name="HSResolution" type="HScrollBar" parent="."]
margin_left = 381.0
margin_top = 269.0
margin_right = 526.0
margin_bottom = 281.0
min_value = 1.0
max_value = 6.0
step = 1.0
value = 4.0

[node name="Timer" type="Timer" parent="."]

[node name="HSMusicVolume" type="HScrollBar" parent="."]
margin_left = 388.0
margin_top = 389.0
margin_right = 533.0
margin_bottom = 401.0
rect_scale = Vector2( 0.96, 1 )
max_value = 10.0
value = 5.0

[node name="LblSoundFXVolume" type="Label" parent="."]
margin_left = 249.0
margin_top = 420.0
margin_right = 359.0
margin_bottom = 485.0
custom_colors/font_color = Color( 0.160784, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Efectos
Sonoros:"

[node name="HSSoundFXVolume" type="HScrollBar" parent="."]
margin_left = 388.0
margin_top = 527.0
margin_right = 533.0
margin_bottom = 539.0
rect_scale = Vector2( 0.96, 1 )
max_value = 10.0
value = 5.0

[node name="BtnBack" type="Button" parent="."]
margin_left = 801.0
margin_top = 534.0
margin_right = 905.0
margin_bottom = 587.0
custom_colors/font_color = Color( 0.988235, 0.968627, 0.968627, 1 )
custom_fonts/font = SubResource( 3 )
text = "Volver"

[connection signal="scrolling" from="HSResolution" to="." method="_on_HSResolution_scrolling"]
[connection signal="value_changed" from="HSMusicVolume" to="." method="_on_HSMusicVolume_value_changed"]
[connection signal="value_changed" from="HSSoundFXVolume" to="." method="_on_HSSoundFXVolume_value_changed"]
[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
